Frontend initial integration with rewritten backend
